--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +24,7 @@
         </activity>
 
         <service
-            android:name=".surfaceglservice"
+            android:name="com.example.c.openglxmlfour.surfaceglservice"
             android:enabled="true"
             android:exported="true"></service>
     </application>
